--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>This is the App Component</h1>
+<mat-toolbar>
+  <h1>App Component</h1>
+</mat-toolbar>
+<app-message-preview></app-message-preview>
+<app-message-preview></app-message-preview>
+<app-message-preview></app-message-preview>
