--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <mat-toolbar>
   <h1>App Component</h1>
 </mat-toolbar>
-<app-message-preview></app-message-preview>
-<app-message-preview></app-message-preview>
-<app-message-preview></app-message-preview>
+<app-message-list></app-message-list>
