Local references + ViewChild

--- a/src/app/message-preview/message-preview.component.html
+++ b/src/app/message-preview/message-preview.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title [ngStyle]="titleStyle">{{ title }}</mat-card-title>
+  <mat-card-title [ngStyle]="titleStyle" #cardTitle>{{ title }}</mat-card-title>
   <mat-card-subtitle>{{ subtitle }}</mat-card-subtitle>
   <mat-card-content [ngClass]="{ 'inactive': !messageViewable }">{{ message }}</mat-card-content>
   <mat-card-actions>
