Reset for chapter start

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
   <h1>App Component</h1>
 </mat-toolbar>
-<!--<app-message-list></app-message-list>-->
-<app-lifecycle-hooks [myTextFromOutside]="insertedText"></app-lifecycle-hooks>
+<app-message-list></app-message-list>
+<!--<app-lifecycle-hooks [myTextFromOutside]="insertedText"></app-lifecycle-hooks>-->
