Basic highlight directive created

--- a/src/app/message-preview/message-preview.component.html
+++ b/src/app/message-preview/message-preview.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-title [ngStyle]="titleStyle" #cardTitle>{{ title }}</mat-card-title>
-  <mat-card-subtitle>{{ subtitle }}</mat-card-subtitle>
+  <mat-card-subtitle appHighlight>{{ subtitle }}</mat-card-subtitle>
   <mat-card-content [ngClass]="{ 'inactive': !messageViewable }">
     {{ message }}
     <ng-content></ng-content>
